<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tbAltaPlato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme" />

            <TextView
                android:id="@+id/lblRegistrarPlato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrarPlato"
                android:textSize="@dimen/titulo"/>

            <TextView
                android:id="@+id/lblIdPlato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/idPlato" />

            <EditText
                android:id="@+id/txtIdPlato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/lblTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/txtTituloItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/lblDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcion" />

            <EditText
                android:id="@+id/txtDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:maxLength="240" />

            <TextView
                android:id="@+id/lblPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/precio" />

            <EditText
                android:id="@+id/txtPrecioItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/lblCalorias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calorias" />

            <EditText
                android:id="@+id/txtCalorias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:maxLength="4" />

            <ImageButton
                android:id="@+id/btnCamara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <ImageView
                android:id="@+id/imgPlato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <Button
                android:id="@+id/btnRegistrarPlato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnAccept" />

        </LinearLayout>

</ScrollView>

