<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/itemRegistrar"
        android:title="@string/menu1Opt1" />
    <item
        android:id="@+id/itemCrear"
        android:title="@string/menu1Opt2" />
    <item
        android:id="@+id/itemLista"
        android:title="@string/menu1Opt3" />
    <item
        android:id="@+id/itemPedido"
        android:title="@string/menu1Opt4"
        />
    <item
        android:id="@+id/verPedidos"
        android:title="@string/menu1Opt5"
        />
</menu>



