...
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/svBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/tbBuscar"
        tools:layout_editor_absoluteX="4dp">

    </SearchView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBuscarPlatos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/llMargin"
        android:layout_marginBottom="@dimen/llMargin"
        app:layout_constraintBottom_toTopOf="@+id/btnVerPedido"
        app:layout_constraintEnd_toEndOf="parent"
...
