<resources>
    <string name="app_name">Send Meal</string>
    <string name="registroTittle">Registrar Usuario</string>
    <string name="name">Nombre</string>
    <string name="password">Clave</string>
    <string name="passwordRepeat">Repetir clave</string>
    <string name="email">Correo electronico</string>
    <string name="creditCard">Tarjeta de credito</string>
    <string name="number">Numero</string>
    <string name="ccv">CCV</string>
    <string name="mmaa">MM/AAAA</string>
    <string name="accountType">Tipo de cuenta</string>
    <string name="base">Base</string>
    <string name="premium">Premium</string>
    <string name="full">Full</string>
    <string name="initialCredit">Credito inicial</string>
    <string name="notif">Notificar por correro electronico </string>
    <string name="aliasCbu">Alias CBU</string>
    <string name="terms">Acepta terminos y condiciones</string>
    <string name="cbu">CBU</string>
    <string name="welcome">BIENVENIDOS</string>
    <string name="registrarPlato">Registrar plato</string>
    <string name="idPlato">Id del plato</string>
    <string name="descripcion">Descripcion</string>
    <string name="precio">Precio</string>
    <string name="calorias">Calorías</string>
    <string name="miUbicacion">Mi ubicacion</string>
    <string name="msg_token_fmt">El token es</string>

    <string name="isSeller">Es vendedor</string>
    <string name="btnAccept">Aceptar</string>
    <string name="btnNotificacionesOn">ENVIAR NOTIFICACIONES AL MAIL</string>
    <string name="btnNotificacionesOff">NO ENVIAR NOTIFICACIONES AL MAIL</string>
    <string name="btnOfertar">Ofertar</string>
    <string name="btnEditar">Editar</string>
    <string name="btnQuitar">Quitar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnCrear">Crear</string>
    <string name="btnEnviar">Enviar</string>
    <string name="btnMas">+</string>
    <string name="btnMenos">-</string>
    <string name="verPedido">Ver mi pedido</string>
    <string name="btnQuitarItem">X</string>

    <string name="menu1Opt1">"Registrarse"</string>
    <string name="menu1Opt2">Crear plato</string>
    <string name="menu1Opt3">Lista de platos</string>
    <string name="menu1Opt4">Crear pedido</string>
    <string name="menu1Opt5">Ver pedidos</string>

    <string name="faltanCampos">¡Debe completar todos los datos!</string>
    <string name="falloEditar">Lo sentimos, no se pudo editar el plato</string>
    <string name="falloOfertar">Lo sentimos, no se pudo ofertar el plato</string>
    <string name="falloQuitar">Lo sentimos, no se pudo quitar el plato</string>
    <string name="falloCrear">Lo sentimos, no se pudo crear el plato</string>
    <string name="falloAgregarItem">El plato ya forma parte de su pedido</string>
    <string name="falloBuscar">Lo sentimos, no se pudo encontrar el plato en el menu</string>
    <string name="falloBuscarTodos">Lo sentimos, no se pudo encontrar el plato en el menu</string>
    <string name="falloMapa">Lo sentimos, no se pudo cargar la ubicacion</string>
    <string name="falloUbicacion">Debe seleccionar la ubicacion en el mapa.</string>
    <string name="falloBuscarPedidos">Lo sentimos, no se pudo recuperar los pedidos.</string>
    <string name="default_notification_channel_id">Notifiación de Firebase</string>

    <string name="datosGuardados">¡Datos guardados correctamente!</string>
    <string name="platoBorrado">¡El plato se ha borrado correctamente!</string>

    <string name="tituloAlertDialogQuitar">Quitar</string>
    <string name="mensajeAlertDialogQuitar">¿Desea quitar el plato seleccionado?</string>

    <string name="tituloNotificacion">Nueva Oferta</string>
    <string name="mensajeNotificacion">¡Hay una nueva oferta disponible!</string>

    <string name="nombreCanal">Ofertas</string>
    <string name="descripcionCanal">Recibe notificaciones sobre nuevas ofertas disponibles</string>

    <string name="itemPedidoQuitado">¡Se quitó el plato del pedido!</string>
    <string name="falloEnviarPedido">Lo sentimos, no se pudo enviar el pedido</string>


</resources>
